2006-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/itfile.doc, doc/tutorial/rayleigh.doc,
	doc/tutorial/src/Makefile.am, doc/tutorial/src/rayleigh.cpp,
	doc/tutorial/src/read_it_file.cpp, doc/tutorial/src/sources.mk,
	doc/tutorial/src/write_it_file.cpp: Updated tutorial example
	programs and their description. Removed unnecessary reference
	files for the tutorial programs. (merged from itpp-3-9-branch)

	* extras/Makefile.am: Matlab/Octave itload.m and itsave.m scripts
	are now installed into $PREFIX/share/doc (merged from
	itpp-3-9-branch)

2006-02-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/newton_search_test.cpp, tests/newton_search_test.ref:
	Fixed precision problems when using MKL

2006-02-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/transforms.cpp, tests/transforms_test.cpp,
	tests/transforms_test.ref: Bug-fixes in FFT/IFFT functions based
	on ACML library. Temporary `comm' vectors are now allocated
	dynamically when neccessary. This fixes segmentation faults in
	sigfun and filter_design test programs.

2006-02-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/index.doc.in, doc/local/installation.doc:
	Documentation updated to reflect recent changes in configuration's
	scripts

	* configure.ac: Cosmetic changes in displayed report

	* README: Updated with the content from IT++ html main page

2006-02-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/newton_search.cpp, itpp/base/newton_search.h: Minor
	fixes in overloaded search functions (added returned bool value)

	* itpp/base/transforms.cpp, itpp/base/transforms.h,
	tests/transforms_test.cpp, tests/transforms_test.ref: Added IDCT
	implementation to idct() functions based on the MKL and ACML. 
	Test program updated as well.

	* doc/local/index.doc.in: IT++ main html page updated (using CSS
	instead of tables for layout)  

2006-02-02  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	